--- a/.github/workflows/cookietest.yml
+++ b/.github/workflows/cookietest.yml
@@ -31,7 +31,7 @@ jobs:
         python -m cookiecutter --no-input $GITHUB_WORKSPACE package_name=myapp
     - name: Test dirs
       run: |
-        ls -la
+        ls -la dist/
     # - name: Lint with flake8
     #   run: |
     #     # stop the build if there are Python syntax errors or undefined names
