--- a/.github/workflows/cookietest.yml
+++ b/.github/workflows/cookietest.yml
@@ -26,12 +26,13 @@ jobs:
         pip install --user cookiecutter
     - name: Create test project
       run: |
-        mkdir dist
-        cd dist
-        python -m cookiecutter --no-input $GITHUB_WORKSPACE package_name=myapp
-    - name: Test dirs
+        mkdir dist && cd dist && \
+            python -m cookiecutter --no-input $GITHUB_WORKSPACE package_name=myapp
+    - name: Install generated app dependencies
       run: |
-        ls -la dist/
+        cd dist/myapp && python -m venv env && source env/bin/activate \
+            pip install -r requirements.txt && \
+            pip install pytest pytest-cov 
     # - name: Lint with flake8
     #   run: |
     #     # stop the build if there are Python syntax errors or undefined names
