--- a/.github/workflows/cookietest.yml
+++ b/.github/workflows/cookietest.yml
@@ -40,6 +40,7 @@ jobs:
         flake8 . --exclude env --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --exclude env --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    # - name: Test with pytest
-    #   run: |
-    #     pytest
+    - name: Test with pytest
+      run: |
+        cd dist/myapp && source env/bin/activate 
+        pytest --cov
