--- a/.github/workflows/cookietest.yml
+++ b/.github/workflows/cookietest.yml
@@ -26,16 +26,21 @@ jobs:
         pip install --user cookiecutter
     - name: Create test project
       run: |
-        mkdir dist
-        cd dist
-        cookiecutter --no-input $GITHUB_WORKSPACE package_name=myapp
-        tree .
-    # - name: Lint with flake8
-    #   run: |
-    #     # stop the build if there are Python syntax errors or undefined names
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    # - name: Test with pytest
-    #   run: |
-    #     pytest
+        mkdir dist && cd dist && \
+            python -m cookiecutter --no-input $GITHUB_WORKSPACE package_name=myapp
+    - name: Install generated app dependencies
+      run: |
+        cd dist/myapp
+        pip install -r requirements.txt
+        pip install pytest pytest-cov flake8
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        cd dist/myapp
+        flake8 . --exclude env --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --exclude env --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Test with pytest
+      run: |
+        cd dist/myapp
+        pytest --cov
